--- a/pom.xml
+++ b/pom.xml
@@ -111,7 +111,7 @@
 						<path>
 							<groupId>org.projectlombok</groupId>
 							<artifactId>lombok-mapstruct-binding</artifactId>
-							<version>${org.lombok-mapstruct-binding}0.2.0</version>
+							<version>${org.lombok-mapstruct-binding}</version>
 						</path>
 					</annotationProcessorPaths>
 				</configuration>
